welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:5: error: not found: value num
		if (nums(x)<=num(x+1) && x<nums.length-1) {
                             ^maxValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for (x<- 0 to nums.length-1) {
              ^