welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	var y,i:Int=0;

	for (x<- 0 to nums.length-1) {
		if (nums(x)<=num(x+1) && x<nums.length-1) {
			y=nums(x+1)
		}
	}
	
}
